# DenyDesktopApp

./: .gitignore  ForWorkEditor.ui  NewDriver.py  README.md  WaybillUnit.py  Waybills.py  comments.txt  data.py  data_provider.py  data_saver.py  forworkeditor.py  main.py  main_window_waybill.py  main_window_waybill.ui  pyproject.toml
admin/: bus.json  drivers.json  orders_per_day.json  route.json
forms/: NewBus.py  NewDriver.py  NewRoute.py  OrderUnit.py  Orders.py  Route.py  WaybillUnit.py  Waybills.py  forworkeditor.py
ui/: ForWorkEditor.ui  Narad.ui  NewBus.ui  NewDriver.ui  NewRoute.ui  OrderUnit.ui  Orders.ui  Route.ui  WaybillUnit.ui  Waybills.ui
