[tool.poetry]
name = "denydesktopapp"
version = "0.1.0"
description = ""
authors = ["Anry"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyQt5 = "5.15.10"
pyqt5-qt5 = "5.15.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
